smooth scrolling is added by Aadesh singh.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
         <link rel="stylesheet" href="./index.css">
         <script src="https://kit.fontawesome.com/0d2233c76d.js" crossorigin="anonymous"></script>
         <title>Resume: Aadesh singh</title>
+        <meta name="viewport" content="width = device-width , initial-scale = 1">
     </head>
     <body>
         <header id="body-header">
             <nav>
                 <ul class="nav" id="dropdownclick">
                     <li><a href="./index.html">home</a></li>
-                    <li><a href="#skills">skills</a></li>
-                    <li><a href="#experience">Experience</a></li>
-                    <li><a href="#education">education</a></li>
-                    <li><a href="#portfolio">portfolio</a></li>
-                    <li><a href="#contact">contact</a></li>
+                    <li><a href="#skills" >skills</a></li>
+                    <li><a href="#Experience">Experience</a></li>
+                    <li><a href="#education" >education</a></li>
+                    <li><a href="#portfolio" >portfolio</a></li>
+                    <li><a href="#contact" >contact</a></li>
                     <li class="dropdownicon"><a href="javascript:void(0);" onclick="dropdownmenu()"> &#9776;</a></li>
                 </ul>
                 <h1>Aadesh Singh</h1>
@@ -281,11 +282,11 @@
                     </div>
                     <div class="my-details-info-container">
                         <i class="fas fa-mobile-alt"></i>
-                        <span>9999999999</span>
+                        <span>9354275363</span>
                     </div>
                     <div class="my-details-info-container">
                         <i class="far fa-envelope"></i>
-                        <span>myemail@gmail.com</span>
+                        <span>aadeshsingh146@gmail.com</span>
                     </div>
                 </div>
             </div>
@@ -326,17 +327,6 @@
             </div>
 
         </section>
-        <script>
-            function dropdownmenu(){
-                var x = document.getElementById("dropdownclick");
-                if(x.className==="nav"){
-                    x.className += " responsive";
-                    /* change class topnav to topnav.responsive*/
-                }
-                else
-                    x.className = "nav";
-            }
-        
-        </script>
+        <script src="./index.js"></script>
     </body>
 </html>
