animated moving skills section is added

--- a/index.html
+++ b/index.html
@@ -54,24 +54,98 @@
                 earum omnis ipsum <b>saepe, voluptas</b>.
                 </p>
         </section>
-        <section id="skills" >
+
+        
+        <section id="skills">
+            <h1 class="section-heading mb75px ">
+                <span>
+                    <i class="fas fa-chalkboard-teacher"></i>
+                </span>
+                <span> SKILLS </span>
+            </h1>
+
+            <div class="skills-display">
+
+                <div class="skill-progress">
+                    <div class="fifty-percent mb-blue" data-bar-width="55">
+                        <div class="skill-name">
+                            <span> C++ </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="eighty-five-percent mb-orange" data-bar-width="85">
+                        <div class="skill-name">
+                            <span> HTML </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="eighty-percent mb-light-purple" data-bar-width="85">
+                        <div class="skill-name">
+                            <span> CSS </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="fifty-percent mb-teal" data-bar-width="55">
+                        <div class="skill-name">
+                            <span> Javascript </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="fifty-percent mb-blue" data-bar-width="55">
+                        <div class="skill-name">
+                            <span> NodeJs </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="fifty-percent mb-gold" data-bar-width="55">
+                        <div class="skill-name">
+                            <span> ReactJs </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="fifty-percent mb-red" data-bar-width="55">
+                        <div class="skill-name">
+                            <span> ExpressJs </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill-progress">
+                    <div class="eighty-percent mb-light-purple" data-bar-width="85">
+                        <div class="skill-name">
+                            <span> MongoDB </span>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <!--s <section id="skills" >
             <h1 class="section-heading mb75px">
                 <span>
                     <i class="fas fa-chalkboard-teacher"></i>
                 </span>
                 <span>Skills</span>
             </h1>
-            <div class="skills-display mb75px">
-                <div class="skill-bar"><div class="base" id="color1">C++</div></div>
-                <div class="skill-bar"><div class="base" id="color2">html</div></div>
-                <div class="skill-bar"><div class="base" id="color3">css</div></div>
-                <div class="skill-bar"><div class="base" id="color4">JavaScript</div></div>
-                <div class="skill-bar"><div class="base" id="color5">ReactJS</div></div>
-                <div class="skill-bar"><div class="base" id="color6">Mongodb</div></div>
-                <div class="skill-bar"><div class="base" id="color7">ExpressJS</div></div>
-                <div class="skill-bar"><div class="base" id="color8">NodeJS</div></div>
+            <div id="skills-container" class="skills-display mb75px">
+                <div class="skill-bar"><div class="base" id="color1" data-width="75%">C++</div></div>
+                <div class="skill-bar"><div class="base" id="color2" data-width="90%">html</div></div>
+                <div class="skill-bar"><div class="base" id="color3" data-width="85%">css</div></div>
+                <div class="skill-bar"><div class="base" id="color4" data-width="75%">JavaScript</div></div>
+                <div class="skill-bar"><div class="base" id="color5" data-width="75%">ReactJS</div></div>
+                <div class="skill-bar"><div class="base" id="color6" data-width="55%">Mongodb</div></div>
+                <div class="skill-bar"><div class="base" id="color7" data-width="75%">ExpressJS</div></div>
+                <div class="skill-bar"><div class="base" id="color8" data-width="65%">NodeJS</div></div>
             </div>
         </section>
+    -->
         <section id="experience">
             <h1>
                 <i class="fas fa-briefcase"></i>
