feature added by Aadesh singh

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header id="body-header">
             <nav>
                 <ul class="nav" id="dropdownclick">
-                    <li><a href="./index.html">home</a></li>
+                    <li><a id="home" href="./index.html">home</a></li>
                     <li><a href="#skills" >skills</a></li>
                     <li><a href="#Experience">Experience</a></li>
                     <li><a href="#education" >education</a></li>
@@ -18,6 +18,10 @@
                     <li><a href="#contact" >contact</a></li>
                     <li class="dropdownicon"><a href="javascript:void(0);" onclick="dropdownmenu()"> &#9776;</a></li>
                 </ul>
+                <span id="perc">Scrolled 0%</span>
+                <a href="#" id="scrtop">
+                    <i class="fas fa-arrow-circle-up"></i>
+                </a>
                 <h1>Aadesh Singh</h1>
                 <div class="second-list">
                 <ul class="icons">
