Changes By Aadesh Singh

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header id="body-header">
             <nav>
-                <ul class="nav" id="dropdownclick">
+                <ul class="nav nav2" id="dropdownclick">
                     <li><a id="home" href="./index.html">home</a></li>
                     <li><a href="#skills" >skills</a></li>
                     <li><a href="#Experience">Experience</a></li>
@@ -37,7 +37,7 @@
         </header>
         <section id="about">
             <div class="profile-img">
-                <img src="./assets/WhatsApp Image 2021-01-24 at 9.37.45 PM.jpeg" height="200px" width="200px">
+                <img src="./assets/profileimg.jpeg" height="300px" width="300px">
             </div>
             <div></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <b>Maxime mollitia</b>,
