--- a/index.html
+++ b/index.html
@@ -341,11 +341,11 @@
             <div id="contact-container">
 
                 <div id="contact-form-container">
-                    <form id="contact-form">
+                    <form id="contact-form" method="POST" action="mailto: thebillionstour@gmail.com" enctype="multipart/form-data">
                         <input id="input-name" name="name" type="text" placeholder="Your Name">
                         <input id="input-email" name="input-email" type="text" required placeholder="Your Email">
                         <textarea id="input-message" name="input-message" rows="2" cols=40 placeholder="Message"></textarea>
-                        <button class="sub-btn" type="submit">SEND MESSAGE</button>
+                        <button class="sub-btn" type="submit" onclick="mail()">SEND MESSAGE</button>
                     </form>
                 </div>
                 <div id="my-details-container">
